# gamenet

./: .gitignore  LICENSE  README.md  build.gradle  main.go  settings.gradle
client/: README.md  build.gradle  gamechat.html  justchat.html  open.html
client/src/: Core.kt  Scene.kt
client/src/exception/: DocumentError.kt
client/src/main/js/: module.js
client/src/main/kotlin/: Core.kt  DebugInfo.kt  EventHandler.kt  Input.kt  Logger.kt  MapViewInit.kt  ProWorker.kt  Scene.kt  ServerConnection.kt  (+2 more)
client/src/objects/: GameObject.kt  StaticCamera.kt  Terrain.kt
client/test/: TestScene.kt
docs/: main_processes.md  open_structure.xml  open_update_sequence.xml
game/: game.go
game/pram/: pram.go
namegen/: namegen.go
procede/: Cargo.toml  readme.md
procede/doc/: river_graph.md
procede/scripts/: poly_graph.py  river_graph.py  town_graph.py
procede/src/: cache3.rs  delaunay.rs  layer.rs  lib.rs  poly_util.rs  quad.rs  river.rs  serde_util.rs  surface.rs  tectonic.rs  test_util.rs  util.rs  voronoi.rs  voronoi3.rs  world.rs
procede/src/pop/: business.rs  mod.rs  readme.md  streets.rs
procede/src/pop/streets/: builder.rs  lot.rs  map.rs  mod.rs  open_dir.rs  plan.rs  poly.rs  radial_builder.rs  readme.md  street_builder.rs  tensor.rs  util.rs
procede/src/river/: common.rs  curve.rs  hex.rs  major.rs  mod.rs  river_graph.rs  segment.rs
procede/src/util/: astar.rs  cache.rs  line.rs  mod.rs  point.rs  poly.rs  vec.rs  vec2.rs  voronoi.rs
view/: gamechat.html
wschat/: client.go  home.html  hub.go  main.go  wschat.go
wschat/namegen/: namegen.go
(+46 files in other folders)
