[package]
name = "procede"
version = "0.0.1"
authors = []

[lib]
crate-type = ["cdylib"]

[dependencies]
assert_approx_eq = "1.1.0"
cgmath = { version = "0.17.0", features = ["serde"] }
fnv = "1.0.6"
itertools = "0.8.0"
lru-cache = "0.1.2"
lyon_geom = "0.14.1"
noise = "0.5.1"
num-traits = "0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
smallvec = "0.6.10"
wasm-bindgen = "0.2"
